Fix another overflow issue in stats bar

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -218,6 +218,10 @@ body.checklist-visible {
     }
   }
 
+  .checklist-overview-stat-default {
+    visibility: hidden;
+  }
+
   .checklist-overview-stat-tooltip {
     width: 40px;
     height: 20px;
@@ -237,6 +241,7 @@ body.checklist-visible {
 
     &.visible {
       display: block;
+      visibility: visible;
     }
 
     &:after {
